# broken-site

./: .gitignore  .npmrc  DEBUG.md  DEPLOYMENT.md  FRONTEND_SETUP.md  LOGGING_IMPLEMENTATION.md  OPENAI_TOOLS_FIX.md  Procfile  README.md  USER_FRIENDLY_SUMMARY.md  app.json  build.sh  create_assistant.py  deploy.sh  env.example  heroku-build.sh  package.json  pyproject.toml  requirements.txt  run.sh  setup-heroku.sh  start-backend.sh  start-dev.sh  start-frontend.sh  test-build.sh
docs/: LOGGING_AND_URL_UPDATES.md  OPENAI_AGENT_FIXES_SUMMARY.md  OPENAI_DEFAULT_UPDATE.md  README.md  project-brief.md
frontend/: README.md  build.sh  index.html  package-lock.json  package.json
frontend/src/: App.jsx  App.scss
frontend/src/styles/: main.scss
src/diagnostics/: __init__.py  agent.py  config.py  main.py  offline.py  schemas.py  user_friendly.py
src/diagnostics/tools/: __init__.py  dns_tools.py  hosting_tools.py  http_tools.py  screenshot_tools.py  tls_tools.py
tests/: README.md  test_agent.py  test_api_modes.py  test_app_import.py  test_hosting_detection.py  test_logging.py  test_offline.py  test_openai_api.py  test_openai_fix.py  test_user_friendly.py
